grammar.js
    structure: ($) =>
      list($._semicolon, choice($._structure_item, $.package_statement)),

    _structure_item: ($) =>
      choice(
        $.package_declaration,
        $.import_declaration,
        $.using_declaration,
        $.type_definition,
        $.error_type_definition,
        $.struct_definition,
        $.tuple_struct_definition,
        $.enum_definition,
        $.value_definition,
        $.const_definition,
        $.function_definition,
        $.test_definition,
        $.trait_definition,
        $.impl_definition,
        $.impl_declaration,
        $.type_alias_definition,
        $.trait_alias_definition,
        $.function_alias_definition
      ),

    derive_item: ($) => seq($.type_name, optional($.arguments)),

    derive_directive: ($) => seq("derive", "(", list(",", $.derive_item), ")"),

    type_alias_targets: ($) =>
      choice(
        seq($._type, "as", $.identifier, optional($.type_parameters)),
        seq($._type, "=", $._type),
        seq($.package_identifier, $.dot_identifier),
        seq($.dot_identifier),
        seq($.package_identifier, ".(", list(",", $.type_alias_target), ")")
      ),

    type_alias_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "typealias",
        $.type_alias_targets
      ),

    enum_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "enum",
        $.identifier,
        optional($.type_parameters),
        "{",
        list($._semicolon, $.enum_constructor),
        "}",
        optional($.derive_directive)
      ),

    external_linkage: ($) => seq("extern", $.string_literal),

    external_source: ($) =>
      choice(
        $.string_literal,
        seq($.string_literal, $.string_literal),
        $.multiline_string_literal
      ),

    function_definition: ($) => {
      const signature = seq(
        optional($.attributes),
        optional($.visibility),
        optional($.external_linkage),
        optional("async"),
        "fn",
        optional($.type_parameters),
        $.function_identifier,
        optional("!"),
        optional(alias($._signature_parameters, $.parameters))
      );

      return choice(
        // With body (normal .mbt files)
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          optional($.where_clause),
          $.block_expression
        ),
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          "=",
          $.external_source
        ),
        // Without body (.mbti files) - requires return type to disambiguate from ASI
        seq(signature, choice(seq("->", $.return_type), $.error_annotation))
      );
    },

    _signature_parameters: ($) =>
      seq("(", list(",", $._signature_parameter), ")"),

    trait_alias_targets: ($) =>
      choice(
        seq($._type, "as", $.identifier, optional($.type_parameters)),
        seq($._type, "=", $._type),
        seq($.package_identifier, $.dot_identifier),
        seq($.dot_identifier),
        seq($.package_identifier, ".(", list(",", $.trait_alias_target), ")")
      ),

    trait_alias_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "traitalias",
        $.trait_alias_targets
      ),

    impl_definition: ($) =>
      seq(
        optional($.attributes),
        optional($.visibility),
        "impl",
        optional($.type_parameters),
        $.type_name,
        optional(seq("for", $._type)),
        "with",
        optional(seq("fn", optional($.type_parameters))),
        $.function_identifier,
        optional("!"),
        $.parameters,
        optional(seq("->", $.return_type)),
        choice($.block_expression, seq("=", $.external_source))
      ),

    // Impl declaration without body (for .mbti interface files)
    _expression: ($) => choice($._complex_expression, $._simple_expression),

    _simple_expression: ($) =>
      choice(
        $.atomic_expression,
        $.qualified_identifier,
        $.unary_expression,
        $.struct_expression,
        alias($.nonempty_block_expression, $.block_expression),
        $.anonymous_lambda_expression,
        $.anonymous_matrix_lambda_expression,
        $.constructor_expression,
        $.apply_expression,
        $.array_access_expression,
        $.dot_apply_expression,
        $.dot_dot_apply_expression,
        $.access_expression,
        $.method_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.constraint_expression,
        $.array_expression,
        $.map_expression,
        $.as_expression,
        $.is_expression,
        $.range_expression,
        $.append_expression,
        $.binary_expression,
        $.lexmatch_test_expression,
        $.regex_match_expression,
        "_"
      ),

    _non_pipe_expression: ($) =>
      choice(
        $._non_pipe_simple_expression,
        alias($._non_pipe_binary_expression, $.binary_expression)
      ),

    atomic_expression: ($) => choice($.string_interpolation, $.literal),

    literal: ($) =>
      choice(
        $.boolean_literal,
        $.double_literal,
        $.float_literal,
        $.integer_literal,
        $.byte_literal,
        $.byte_escape_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.regex_literal,
        $.multiline_string_literal
      ),

    boolean_literal: (_) => choice("true", "false"),

    integer_literal: (_) =>
      token(
        choice(
          /[0-9][0-9_]*(UL|U|L|N)?/,
          /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
          /0[oO][0-7_]+(UL|U|L|N)?/,
          /0[bB][01_]+(UL|U|L|N)?/
        )
      ),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    string_literal: ($) => choice(seq('"', repeat($.string_fragment), '"')),

    string_fragment: ($) =>
      choice($.unescaped_string_fragment, $.escape_sequence),

    unescaped_string_fragment: (_) =>
      choice(
        token.immediate(prec(1, /\\[^ntbrf'"\\{]/)),
        token.immediate(prec(1, /[^"\\]+/))
      ),

    multiline_string_content: (_) => /[^\n]*/,

    multiline_string_fragment: ($) => seq("#|", $.multiline_string_content),

    multiline_string_literal: ($) =>
      prec.left(
        repeat1(
          choice(
            $.multiline_string_fragment,
            $.multiline_interpolation_fragment
          )
        )
      ),

    binary_expression: ($) =>
      choice(
        binaryExpression($._simple_expression),
        prec.left(
          "pipe",
          seq(
            $._simple_expression,
            "|>",
            choice($._simple_expression, $.pipe_arrow_function_expression)
          )
        ),
        prec.left(
          "pipe",
          seq(
            $._non_pipe_expression,
            "<|",
            choice($._non_pipe_expression, $.pipe_arrow_function_expression)
          )
        )
      ),

    struct_expression: ($) =>
      choice(
        seq(
          "{",
          choice(
            seq(
              $.labeled_expression_pun,
              ",",
              list(",", $.struct_field_expression)
            ),
            seq($.labeled_expression, optional(",")),
            seq(
              $.labeled_expression,
              ",",
              list1(",", $.struct_field_expression)
            )
          ),
          "}"
        ),
        seq($.type_name, "::", "{", list(",", $.struct_field_expression), "}"),
        seq(optional(seq($.type_name, "::")), "{", "..", $._expression, "}"),
        seq(
          optional(seq($.type_name, "::")),
          "{",
          "..",
          $._expression,
          ",",
          list(",", $.struct_field_expression),
          "}"
        )
      ),

    struct_field_expression: ($) =>
      choice($.labeled_expression, $.labeled_expression_pun),

    labeled_expression_pun: ($) => $._lowercase_identifier,

    block_expression: ($) =>
      seq("{", list($._semicolon, $._statement_expression), "}"),

    matrix_case_clause: ($) =>
      seq(
        list1(",", $._pattern),
        optional($.pattern_guard),
        "=>",
        $._statement_expression
      ),

    constructor_expression: ($) =>
      choice(
        $._uppercase_identifier,
        seq($.package_identifier, $.dot_uppercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    labelled_argument: ($) => seq($._lowercase_identifier, "=", $._expression),

    argument: ($) =>
      choice(
        $._expression,
        $.labelled_argument,
        $.forwarded_labelled_argument,
        $.optional_argument,
        $.forwarded_optional_argument
      ),

    apply_operator: ($) => choice("!", "!!", "?"),

    arguments: ($) => seq("(", list(",", $.argument), ")"),

    apply_expression: ($) =>
      prec.right(
        seq($._simple_expression, optional($.apply_operator), $.arguments)
      ),

    array_access_expression: ($) =>
      seq(
        $._simple_expression,
        "[",
        choice(
          $._expression,
          seq(optional($._expression), ":", optional($._expression))
        ),
        "]"
      ),

    dot_apply_expression: ($) =>
      seq(
        $._simple_expression,
        $.dot_identifier,
        "(",
        list(",", $.argument),
        ")"
      ),

    dot_dot_apply_expression: ($) =>
      seq(
        $._simple_expression,
        $.dot_dot_identifier,
        "(",
        list(",", $.argument),
        ")"
      ),

    access_expression: ($) => seq($._simple_expression, $.accessor),

    accessor: ($) => choice($.dot_identifier, seq(".", /[0-9]+/)),

    method_expression: ($) => seq($.type_name, "::", $._lowercase_identifier),

    unit_expression: (_) => seq("(", ")"),

    map_expression: ($) => seq("{", list(",", $.map_element_expression), "}"),

    as_expression: ($) => seq($._simple_expression, "as", $.type_name),

    is_expression: ($) =>
      seq(
        $._simple_expression,
        "is",
        choice($.range_pattern, $._simple_pattern)
      ),

    match_expression: ($) =>
      seq(
        "match",
        $._simple_expression,
        "{",
        list($._semicolon, $.case_clause),
        "}"
      ),

    case_clause: ($) =>
      seq($._pattern, optional($.pattern_guard), "=>", $._statement_expression),

    continue_expression: ($) =>
      seq("continue", optional($.label), strictList(",", $._expression)),

    try_catch_expression: ($) =>
      seq(
        optional("try"),
        $._simple_expression,
        $.try_catch_clause,
        optional($.try_else_clause)
      ),

    try_catch_clause: ($) =>
      seq(
        seq("catch", optional("!")),
        "{",
        list($._semicolon, $.case_clause),
        "}",
        optional($.noraise_clause)
      ),

    if_expression: ($) =>
      seq(
        "if",
        $._simple_expression,
        $.block_expression,
        optional($.else_clause)
      ),

    else_clause: ($) =>
      seq("else", choice($.block_expression, $.if_expression)),

    _statement_expression: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.type_definition,
        $.let_expression,
        $.letrec_expression,
        $.and_expression,
        $.let_mut_expression,
        $.guard_expression,
        $.guard_let_expression,
        $.assign_expression,
        $.named_lambda_expression,
        $.named_matrix_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.raise_expression,
        $.defer_expression,
        $.proof_assert_expression,
        $.proof_let_expression,
        $._expression,
        $.unfinished
      ),

    let_expression: ($) =>
      seq("let", $._pattern, optional($.type_annotation), "=", $._expression),

    let_mut_expression: ($) =>
      seq(
        "let",
        "mut",
        $._lowercase_identifier,
        optional($.type_annotation),
        "=",
        $._expression
      ),

    guard_let_expression: ($) =>
      seq(
        "guard",
        "let",
        $._pattern,
        "=",
        $._simple_expression,
        optional($.guard_let_else_expression)
      ),

    assign_operator: ($) => choice("=", "+=", "-=", "*=", "/=", "%="),

    assign_expression: ($) =>
      seq($.left_value, $.assign_operator, $._expression),

    left_value: ($) =>
      choice(
        $.qualified_identifier,
        $.access_expression,
        $.array_access_expression
      ),

    loop_expression: ($) =>
      seq(
        optional($.loop_label),
        "loop",
        strictList1(",", $._expression),
        "{",
        list($._semicolon, $.matrix_case_clause),
        "}"
      ),

    for_binder: ($) => seq($._lowercase_identifier, "=", $._expression),

    for_expression: ($) =>
      choice(
        seq(
          optional($.loop_label),
          "for",
          strictList(",", $.for_binder),
          $._semicolon,
          optional($._expression),
          $._semicolon,
          strictList(",", $.for_binder),
          $.block_expression,
          optional(choice($.else_clause, $.nobreak_clause)),
          optional($.where_clause)
        ),
        seq(
          optional($.loop_label),
          "for",
          strictList(",", $.for_binder),
          $._semicolon,
          optional($._expression),
          $.block_expression,
          optional(choice($.else_clause, $.nobreak_clause)),
          optional($.where_clause)
        ),
        seq(
          optional($.loop_label),
          "for",
          strictList(",", $.for_binder),
          $.block_expression,
          optional(choice($.else_clause, $.nobreak_clause)),
          optional($.where_clause)
        )
      ),

    for_in_expression: ($) =>
      seq(
        optional($.loop_label),
        "for",
        strictList(",", $._lowercase_identifier),
        "in",
        $._non_pipe_expression,
        optional(
          seq(
            $._semicolon,
            strictList1(",", $.for_binder),
            optional(seq($._semicolon, strictList1(",", $.for_binder)))
          )
        ),
        $.block_expression,
        optional(choice($.else_clause, $.nobreak_clause)),
        optional($.where_clause)
      ),

    _pattern: ($) =>
      choice($._simple_pattern, $.range_pattern, $.as_pattern, $.or_pattern),

    or_pattern: ($) => prec.right(seq($._pattern, "|", $._pattern)),

    _simple_pattern: ($) =>
      choice(
        "..",
        $.parenthesized_pattern,
        $.atomic_pattern,
        $._lowercase_identifier,
        $.constructor_pattern,
        $.tuple_pattern,
        $.constraint_pattern,
        $.array_pattern,
        $.struct_pattern,
        $.map_pattern,
        $.empty_struct_or_map_pattern,
        $.any_pattern
      ),

    atomic_pattern: ($) =>
      choice(
        $.literal,
        seq("-", $.integer_literal),
        seq("-", $.double_literal),
        seq("-", $.float_literal)
      ),

    any_pattern: (_) => "_",

    constructor_pattern_argument: ($) =>
      choice(
        seq($._lowercase_identifier, "=", $._pattern),
        $.label,
        $._pattern
      ),

    constructor_pattern: ($) =>
      prec.right(
        seq(
          $.constructor_expression,
          optional(seq("(", list(",", $.constructor_pattern_argument), ")"))
        )
      ),

    range_pattern: ($) =>
      seq($._simple_pattern, choice("..<", "..="), $._simple_pattern),

    _type: ($) => choice($._simple_type, $.function_type),

    _simple_type: ($) =>
      choice(
        $.qualified_type_identifier,
        $.apply_type,
        $.tuple_type,
        $.trait_object_type,
        $.parenthesized_type,
        $.option_type,
        "_"
      ),
